--- a/Numpy/day1.ipynb
+++ b/Numpy/day1.ipynb
@@ -183,6 +183,50 @@
     "sequence= np.arange(0,10,2)\n",
     "print(\"Sequence Array\",sequence)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vector, Matrix and Tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vector [1 2 3]\n",
+      "Matrix [[1 2 3]\n",
+      " [1 2 3]]\n",
+      "Tensor [[[ 1  2  3]\n",
+      "  [ 4  5  6]\n",
+      "  [ 7  8  9]\n",
+      "  [10 11 12]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector=np.array([1,2,3])\n",
+    "print(\"vector\",vector)\n",
+    "matrix=np.array([[1,2,3],[1,2,3]])\n",
+    "print(\"Matrix\",matrix)\n",
+    "tensor=np.array([[[1,2,3],[4,5,6],\n",
+    "                  [7,8,9],[10,11,12]]])\n",
+    "print(\"Tensor\",tensor)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
