--- a/Numpy/day1.ipynb
+++ b/Numpy/day1.ipynb
@@ -222,6 +222,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array Properties\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (2, 3)\n",
+      "Dimension: 2\n",
+      "Size: 6\n",
+      "Dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([[1,2,3],[4,5,6]])\n",
+    "print(\"Shape:\",arr.shape)\n",
+    "print(\"Dimension:\",arr.ndim)\n",
+    "print(\"Size:\",arr.size)\n",
+    "print(\"Dtype:\",arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array Reshaping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Rehaped array\n",
+      " [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "Flatten Array [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Ravled Array [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Transpose\n",
+      " [[ 0  4  8]\n",
+      " [ 1  5  9]\n",
+      " [ 2  6 10]\n",
+      " [ 3  7 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.arange(12)\n",
+    "print(\"Original Array\",arr)\n",
+    "reshaped=arr.reshape((3,4))\n",
+    "print(\"Rehaped array\\n\",reshaped)\n",
+    "flat=reshaped.flatten()\n",
+    "print(\"Flatten Array\",flat) # returns copy\n",
+    "ravel=reshaped.ravel()\n",
+    "print(\"Ravled Array\",ravel) # Changes original array\n",
+    "transpose=reshaped.T\n",
+    "print(\"Transpose\\n\",transpose)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
