--- a/Numpy/day2.ipynb
+++ b/Numpy/day2.ipynb
@@ -178,7 +178,8 @@
     "indices=[1,2,3]\n",
     "print(numbers[indices])\n",
     "where= np.where(numbers>4)\n",
-    "print(\"Numbers with np.where\",numbers[where])"
+    "print(\"Numbers with np.where\",numbers[where])\n",
+    "conditonarray=np.where(numbers>5,numbers)"
    ]
   }
  ],
