--- a/Numpy/day2.ipynb
+++ b/Numpy/day2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "Sorted Array: [1 1 2 3 3 4 4 7]\n",
-      "Sorted array:\n",
+      "Sorted array by Column:\n",
       " [[1 2]\n",
       " [1 2]\n",
       " [3 4]]\n"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,8 @@
      "output_type": "stream",
      "text": [
       "[3 4 5]\n",
-      "Numbers with np.where [5 6 5]\n"
+      "Numbers with np.where [5 6 5]\n",
+      "[ 1  3  4  5  1 12  4  5  3]\n"
      ]
     }
    ],
@@ -179,7 +180,9 @@
     "print(numbers[indices])\n",
     "where= np.where(numbers>4)\n",
     "print(\"Numbers with np.where\",numbers[where])\n",
-    "conditonarray=np.where(numbers>5,numbers)"
+    "# conditional clause as if/elsenumbers>5,numbers*2,numbers\n",
+    "conditonarray=np.where(numbers>5,numbers*2,numbers)\n",
+    "print(conditonarray)"
    ]
   }
  ],
