--- a/Numpy/day2.ipynb
+++ b/Numpy/day2.ipynb
@@ -184,6 +184,98 @@
     "conditonarray=np.where(numbers>5,numbers*2,numbers)\n",
     "print(conditonarray)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding & Removing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1=np.array([1,2,3])\n",
+    "arr2=np.array([4,5,6])\n",
+    "combined=np.concatenate((arr1,arr2))\n",
+    "print(combined)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Array Compatiability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compatiable shapes True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([1,2,3])\n",
+    "b=np.array([4,5,6])\n",
+    "c=np.array([7,8,9])\n",
+    "d=np.array([10,11,12])\n",
+    "print(\"Compatiable shapes\",a.shape==b.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding new row:\n",
+      " [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "Adding new column:\n",
+      " [[ 1  2  3 10]\n",
+      " [ 4  5  6 11]]\n",
+      "Original Array: [1 2 3 4 5]\n",
+      "After Deletion: [1 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array=np.array([[1,2,3],[4,5,6]])\n",
+    "new_row=np.array([7,8,9])\n",
+    "with_row=np.vstack((array,new_row))\n",
+    "print(\"Adding new row:\\n\",with_row)\n",
+    "newcol=np.array([[10],[11]])\n",
+    "with_col=np.hstack((array,newcol))\n",
+    "print(\"Adding new column:\\n\",with_col)\n",
+    "\n",
+    "# Array Deletion\n",
+    "arr=np.array([1,2,3,4,5])\n",
+    "print(\"Original Array:\",arr)\n",
+    "arr=np.delete(arr,1)\n",
+    "print(\"After Deletion:\",arr)"
+   ]
   }
  ],
  "metadata": {
