--- a/Numpy/day3.ipynb
+++ b/Numpy/day3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -23,10 +23,21 @@
       "\n",
       " Sales Data Shape: (8, 5)\n",
       "\n",
-      " Sales Data for 1st 3 Restauranrs\n",
+      " Sales Data for 1st 3 Restaurants\n",
       " [[     1 150000 200000 250000 300000]\n",
       " [     2 200000 250000 300000 350000]\n",
-      " [     3 250000 300000 350000 400000]]\n"
+      " [     3 250000 300000 350000 400000]]\n",
+      "Sales Data:\n",
+      " [[150000 200000 250000 300000]\n",
+      " [200000 250000 300000 350000]\n",
+      " [250000 300000 350000 400000]\n",
+      " [300000 350000 400000 450000]\n",
+      " [350000 400000 450000 500000]\n",
+      " [400000 450000 500000 550000]\n",
+      " [450000 500000 550000 600000]\n",
+      " [500000 550000 600000 650000]]\n",
+      "Total Sales Per Year:\n",
+      " [2600000 3000000 3400000 3800000]\n"
      ]
     }
    ],
@@ -43,7 +54,9 @@
     "])\n",
     "print(\"Zomato Sales Analysis\")\n",
     "print(\"\\n Sales Data Shape:\",sales_data.shape)\n",
-    "print(\"\\n Sales Data for 1st 3 Restaurants\\n\",sales_data[0:3])"
+    "print(\"\\n Sales Data for 1st 3 Restaurants\\n\",sales_data[0:3])\n",
+    "print(\"Sales Data:\\n\",sales_data[:,1:])\n",
+    "print(\"Total Sales Per Year:\\n\",np.sum(sales_data[:,1:], axis=0))"
    ]
   },
   {
