--- a/Numpy/day3.ipynb
+++ b/Numpy/day3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,9 @@
       " [450000 500000 550000 600000]\n",
       " [500000 550000 600000 650000]]\n",
       "Total Sales Per Year:\n",
-      " [2600000 3000000 3400000 3800000]\n"
+      " [2600000 3000000 3400000 3800000]\n",
+      "Minimum Sales Per Restaurant:\n",
+      " [150000 200000 250000 300000 350000 400000 450000 500000]\n"
      ]
     }
    ],
@@ -56,7 +58,9 @@
     "print(\"\\n Sales Data Shape:\",sales_data.shape)\n",
     "print(\"\\n Sales Data for 1st 3 Restaurants\\n\",sales_data[0:3])\n",
     "print(\"Sales Data:\\n\",sales_data[:,1:])\n",
-    "print(\"Total Sales Per Year:\\n\",np.sum(sales_data[:,1:], axis=0))"
+    "print(\"Total Sales Per Year:\\n\",np.sum(sales_data[:,1:], axis=0))\n",
+    "min_sales=np.min(sales_data[:,1:], axis=1)\n",
+    "print(\"Minimum Sales Per Restaurant:\\n\",min_sales)"
    ]
   },
   {
