--- a/Numpy/day3.ipynb
+++ b/Numpy/day3.ipynb
@@ -102,6 +102,76 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector addition: [5 7 9]\n",
+      "Vector Multiplication: [ 4 10 18]\n",
+      "Dot Product: 32\n",
+      "0.2257261285527342\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector1=np.array([1, 2, 3])\n",
+    "vector2=np.array([4, 5, 6])\n",
+    "print(\"Vector addition:\", vector1 + vector2)\n",
+    "print(\"Vector Multiplication:\", vector1 * vector2)\n",
+    "dot_product = np.dot(vector1, vector2)\n",
+    "print(\"Dot Product:\", dot_product)\n",
+    "angle=np.arccos(np.dot(vector1, vector2) / (np.linalg.norm(vector1) * np.linalg.norm(vector2)))\n",
+    "print(angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorized Upper ['BIRYANI' 'CHINESE' 'PIZZA' 'BURGER']\n",
+      "[[12500.         16666.66666667 20833.33333333 25000.        ]\n",
+      " [16666.66666667 20833.33333333 25000.         29166.66666667]\n",
+      " [20833.33333333 25000.         29166.66666667 33333.33333333]\n",
+      " [25000.         29166.66666667 33333.33333333 37500.        ]\n",
+      " [29166.66666667 33333.33333333 37500.         41666.66666667]\n",
+      " [33333.33333333 37500.         41666.66666667 45833.33333333]\n",
+      " [37500.         41666.66666667 45833.33333333 50000.        ]\n",
+      " [41666.66666667 45833.33333333 50000.         54166.66666667]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "restaurent_types=np.array([\"biryani\",'chinese','pizza','burger'])\n",
+    "vectorized_upper=np.vectorize(str.upper)\n",
+    "print(\"Vectorized Upper\",vectorized_upper(restaurent_types))\n",
+    "monthly_avg=sales_data[:,1:]/12\n",
+    "print(monthly_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
