--- a/Projects/ML Project.ipynb
+++ b/Projects/ML Project.ipynb
@@ -706,8 +706,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a66a4e3b-5f2e-4f07-95da-959af70f65d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'housing' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m corr_matrix=\u001b[43mhousing\u001b[49m.corr()\n\u001b[32m      2\u001b[39m corr_matrix[\u001b[33m'\u001b[39m\u001b[33mMEDV\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'housing' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "corr_matrix=housing.corr()\n",
+    "corr_matrix['MEDV']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "059ae865",
    "metadata": {},
    "outputs": [],
    "source": []
